# resp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
examples/: Api_examples.ipynb  api_uses.py
ferp/: cnnp.py  serp_api.py
resp/: __init__.py  resp.py
resp/apis/: acm_api.py  arxiv_api.py  cnnp.py  semantic_s.py
tests/: test_imports.py
